More powerful reduction methods.