@@ -9,16 +9,19 @@ import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
 import java.util.Collections;
+import java.util.List;
 
-public class BatchPreprocessorTest
+class BatchPreprocessorTest
 {
     @Test
     void emptyTest()
     {
+        List<DoubleStatistics> statistics = ImmutableList.of(new DoubleStatistics(), new DoubleStatistics());
+
         Assertions.assertEquals(Collections.emptyList(), BatchPreprocessors.zipToPairs(Collections.emptyList()));
         Assertions.assertEquals(Collections.emptyList(), BatchPreprocessors.zipOffsetOne(Collections.emptyList()));
-        Assertions.assertEquals(ImmutablePair.of(new DoubleStatistics(), new DoubleStatistics()), BatchPreprocessors.reducePairToDoubleStatistics(Collections.emptyList(), (a, b) -> 5, (a, b) -> 10));
-        Assertions.assertEquals(ImmutablePair.of(new DoubleStatistics(), new DoubleStatistics()), BatchPreprocessors.zipReduceToDoubleStatistics(Collections.emptyList(), (a, b) -> 5, (a, b) -> 10));
+        Assertions.assertEquals(statistics, BatchPreprocessors.reducePairToDoubleStatistics(Collections.emptyList(), (a, b) -> 5, (a, b) -> 10));
+        Assertions.assertEquals(statistics, BatchPreprocessors.zipReduceToDoubleStatistics(Collections.emptyList(), (a, b) -> 5, (a, b) -> 10));
         Assertions.assertEquals(Collections.emptyList(), BatchPreprocessors.combineTwoObjectsToEnd(Collections.emptyList(), (a, b) -> 42));
         Assertions.assertEquals(Collections.emptyList(), BatchPreprocessors.combineTwoObjectsToStart(Collections.emptyList(), (a, b) -> 42));
     }
@@ -47,23 +50,23 @@ public class BatchPreprocessorTest
     void reducePairToDoubleStatisticsTest()
     {
         val reduceOne = BatchPreprocessors.reducePairToDoubleStatistics(ImmutableList.of(ImmutablePair.of(1, 2)), (a, b) -> a, (a, b) -> b);
-        Assertions.assertEquals(1, reduceOne.getFirst().getSum());
-        Assertions.assertEquals(2, reduceOne.getSecond().getSum());
+        Assertions.assertEquals(1, reduceOne.get(0).getSum());
+        Assertions.assertEquals(2, reduceOne.get(1).getSum());
 
         val reduceTwo = BatchPreprocessors.reducePairToDoubleStatistics(ImmutableList.of(ImmutablePair.of(1, 2), ImmutablePair.of(2, 3)), (a, b) -> a, (a, b) -> b);
-        Assertions.assertEquals(3, reduceTwo.getFirst().getSum());
-        Assertions.assertEquals(5, reduceTwo.getSecond().getSum());
+        Assertions.assertEquals(3, reduceTwo.get(0).getSum());
+        Assertions.assertEquals(5, reduceTwo.get(1).getSum());
     }
 
     @Test
     void zipReduceToDoubleStatisticsTest()
     {
         val reduceOne = BatchPreprocessors.zipReduceToDoubleStatistics(ImmutableList.of(1, 2), (a, b) -> a, (a, b) -> b);
-        Assertions.assertEquals(1, reduceOne.getFirst().getSum());
-        Assertions.assertEquals(2, reduceOne.getSecond().getSum());
+        Assertions.assertEquals(1, reduceOne.get(0).getSum());
+        Assertions.assertEquals(2, reduceOne.get(1).getSum());
 
         val reduceTwo = BatchPreprocessors.zipReduceToDoubleStatistics(ImmutableList.of(1, 2, 3), (a, b) -> a, (a, b) -> b);
-        Assertions.assertEquals(3, reduceTwo.getFirst().getSum());
-        Assertions.assertEquals(5, reduceTwo.getSecond().getSum());
+        Assertions.assertEquals(3, reduceTwo.get(0).getSum());
+        Assertions.assertEquals(5, reduceTwo.get(1).getSum());
     }
 }
